# snowflake-dbt-serverless-example

./: .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile  FEATURES_OVERVIEW.md  Makefile  README.md  alert_policies.yaml  dagster.yaml  dagster_cloud.yaml  dg.toml  env.example  pyproject.toml
dagster_snowflake_dbt_demo/: definitions.py
dagster_snowflake_dbt_demo/defs/: asset_checks.py  jobs.py  schedules.py  sensors.py
dagster_snowflake_dbt_demo/defs/assets/: snowflake_assets.py
dagster_snowflake_dbt_demo/defs/dbt_analytics/: defs.yaml
dbt_project/: .user.yml  dbt_project.yml  profiles.yml  profiles_parse.yml
dbt_project/models/marts/: customer_metrics.sql  daily_sales_summary.sql  order_analytics.sql
dbt_project/models/staging/: sources.yml  stg_customers.sql  stg_lineitems.sql  stg_orders.sql
