[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dagster-snowflake-dbt-demo"
version = "0.1.0"
description = "Dagster Serverless Demo with Snowflake and dbt"
authors = [
    {name = "Dagster", email = "hello@dagsterlabs.com"}
]
dependencies = [
    "dagster>=1.11.0",
    "dagster-cloud",
    "dagster-dbt",
    "dagster-snowflake",
    "dbt-core==1.8.4",
    "dbt-snowflake==1.8.4",
    "pandas",
    "requests",
    "python-dotenv",
    "dagster-dg-cli",
    # Pin compatible versions to avoid dependency conflicts
    "protobuf>=4.0.0,<5.0",
    "grpcio-health-checking<1.60",
    "click>=8.0,<8.2",
    "tomlkit<0.13.3",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver",
    "pytest",
]

[tool.dagster]
module_name = "dagster_snowflake_dbt_demo"

[tool.dagster.auto_discovery]
enabled = true

[tool.setuptools.packages.find]
where = ["."]
include = ["dagster_snowflake_dbt_demo*"]
